--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "domosedov",
+  "name": "domosed",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,14 +9,20 @@
   },
   "dependencies": {
     "next": "12.0.3",
+    "next-i18next": "^8.10.0",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/tailwindcss": "^2.2.4",
+    "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
   }
 }
